Add setup to see if backend cannot find notion and tmdb tokens
